practice building components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,16 @@
     <div class="col-xs-12">
       <h3>App Component</h3>
       <hr />
-      <app-servers></app-servers>
+      <!--       Selector as selector: 'app-servers'-->
+      <!--      <app-servers></app-servers>-->
+
+      <!--      Selector as element: selector: '[app-servers]'-->
+      <!--      <div app-servers></div>-->
+
+      <!--      Selector as class: selector: '.app-servers' -->
+      <div class="app-servers"></div>
+      <app-warning-alert></app-warning-alert>
+      <app-success-alert></app-success-alert>
     </div>
   </div>
 </div>
