--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,8 +11,13 @@
 
       <!--      Selector as class: selector: '.app-servers' -->
       <div class="app-servers"></div>
-      <app-warning-alert></app-warning-alert>
-      <app-success-alert></app-success-alert>
     </div>
   </div>
+</div>
+<div class="container">
+  <h3>Practice Component</h3>
+  <hr />
+  <app-practice></app-practice>
+  <app-warning-alert></app-warning-alert>
+  <app-success-alert></app-success-alert>
 </div>
