--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -12,20 +12,16 @@
 >
   Add Server
 </button>
+
 <!--Shows the state of the variable-->
 <!--<p [innerText]="allowNewServer"></p>-->
-<p>{{ serverCreationStatus }}</p>
-<app-server></app-server>
-<app-server></app-server>
+<!--<p>{{ serverCreationStatus }}</p>-->
 
-<label>Enter Your UserName</label>
-<input type="text" class="form-control" [(ngModel)]="userName" />
-<!-- Can also set function in click: (click)="userName = ''"-->
-<button
-  class="btn btn-success"
-  [disabled]="!userName"
-  (click)="resetUserName()"
->
-  Reset User
-</button>
-<p>Username is: {{ userName }}</p>
+<!--Creating an if/else to show paragraph -->
+<p *ngIf="serverCreated; else noServer">
+  Server was created, server name is {{ serverName }}
+</p>
+<ng-template #noServer>
+  <p>No server was created.</p>
+</ng-template>
+<app-server *ngFor="let server of servers"></app-server>
