--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,1 @@
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12">
-      <h3>App Component</h3>
-      <hr />
-      <!--       Selector as selector: 'app-servers'-->
-      <!--      <app-servers></app-servers>-->
-
-      <!--      Selector as element: selector: '[app-servers]'-->
-      <!--      <div app-servers></div>-->
-
-      <!--      Selector as class: selector: '.app-servers' -->
-      <div class="app-servers"></div>
-    </div>
-  </div>
-</div>
-<div class="container">
-  <h3>Practice Component</h3>
-  <hr />
-  <app-practice></app-practice>
-  <app-warning-alert></app-warning-alert>
-  <app-success-alert></app-success-alert>
-</div>
+<p>App component</p>
